# IPPV

./: Args.cpp  Args.h  CMakeLists.txt  EdgeFN.cpp  EdgeFN.h  FlowNetwork.cpp  FlowNetwork.h  Graph.cpp  Graph.h  KClistCore.cpp  KClistCore.h  MaxFlow.cpp  MaxFlow.h  README.md  getopt.cpp  getopt.h  main.cpp
dataset/: CA-CondMat.txt  CA-GrQc.txt
output/: CA-GrQc-20.txt  CA-GrQc-5.txt
